adding icons and adding different file path

--- a/.project
+++ b/.project
@@ -1,7 +1,8 @@
 # Gambas Project File 3.0
 Title=Eortologio Greek Orthofox Church Name Date Calendar
 Startup=FMain
-Version=1.1.1
+Icon=calendar.png
+Version=1.1.4
 Component=gb.image
 Component=gb.gtk3
 Component=gb.form
@@ -9,7 +10,18 @@ Description="Eortologio Greek Orthofox Church Name Date Calendar"
 Authors="AngelosPanagiotakis"
 TabSize=2
 Language=en_US
+Maintainer=agelos
 Vendor=AngelosPanagiotakis
+Address=agelospanagiotakis@gmail.com
+Url=http://agelospanagiotakis.blogspot.gr/2009/07/gambas-basic-linux.html
+License=General Public License
+PackageName=eortologio-1.1.4
 Packager=1
+Systems=ubuntu
+Menus=ubuntu:"Applications/Education"
+Categories=ubuntu:"Education"
+Groups=ubuntu:"utils"
+ExtraDependencies=ubuntu:"\t\t"
+ExtraFiles=ubuntu:"db\t/opt/namedays.db"
 Tags=Calendar,Greek
 CreateMenu=1
