--- a/.project
+++ b/.project
@@ -2,7 +2,7 @@
 Title=Eortologio Greek Orthofox Church Name Date Calendar
 Startup=FMain
 Icon=calendar.png
-Version=1.1.4
+Version=1.1.6
 Component=gb.image
 Component=gb.gtk3
 Component=gb.form
@@ -10,18 +10,18 @@ Description="Eortologio Greek Orthofox Church Name Date Calendar"
 Authors="AngelosPanagiotakis"
 TabSize=2
 Language=en_US
-Maintainer=agelos
+Maintainer=Angelos Panagiotakis
 Vendor=AngelosPanagiotakis
 Address=agelospanagiotakis@gmail.com
 Url=http://agelospanagiotakis.blogspot.gr/2009/07/gambas-basic-linux.html
 License=General Public License
-PackageName=eortologio-1.1.4
+PackageName=eortologio-1.1.6
 Packager=1
 Systems=ubuntu
 Menus=ubuntu:"Applications/Education"
 Categories=ubuntu:"Education"
 Groups=ubuntu:"utils"
 ExtraDependencies=ubuntu:"\t\t"
-ExtraFiles=ubuntu:"db\t/opt/namedays.db"
+ExtraFiles=ubuntu:"db\t/opt/eortologio"
 Tags=Calendar,Greek
 CreateMenu=1
